# temporal-name

./: Cargo.toml
src/: lib.rs  main.rs
src/config/: config.rs  config_trait.rs  mod.rs
src/core/: authority.rs  mod.rs
src/core/traits/: core.rs  core_gatekeeper.rs  core_issuer.rs  core_vcs.rs  core_verifier.rs  core_wallet.rs  mod.rs
src/data/: into_active_trait.rs  mod.rs
src/data/entities/: interaction.rs  issuing.rs  minions.rs  mod.rs  request.rs  verification.rs
src/data/migrations/: m20250403_094651_interaction.rs  m20250403_094651_issuing.rs  m20250403_094651_minions.rs  m20250403_094651_request.rs  m20250403_094651_verification.rs  migrator.rs  mod.rs
src/errors/: error_adapter.rs  error_log_trait.rs  errors.rs  mod.rs
src/http/: core_router.rs  gatekeeper_router.rs  issuer_router.rs  mod.rs  openapi_router.rs  vcs_router.rs  verifier_router.rs  wallet_router.rs
src/services/: mod.rs
src/services/client/: client_trait.rs  mod.rs
src/services/gatekeeper/: gatekeeper_trait.rs  mod.rs
src/services/issuer/: issuer_trait.rs  mod.rs
src/services/repo/: mod.rs  repo_trait.rs
src/services/verifier/: mod.rs  verifier_trait.rs
src/services/wallet/: mod.rs  wallet_trait.rs
src/setup/: application.rs  mod.rs
src/setup/commands/: cmd.rs  env_extraction.rs  mod.rs
src/setup/database/: config.rs  db_migrations.rs  helper.rs  mod.rs
src/types/: mod.rs
src/types/enums/: errors.rs  mod.rs  request.rs  vc_type.rs
src/types/gnap/: access_token.rs  callback.rs  (+4 more)
src/utils/: mod.rs
static/certificates/: README.md
static/environment/: .env
(+75 files in other folders)
