[package]
name = "temporal-name"
version = "0.1.0"
edition = "2021"
authors = ["Rodrigo Menéndez <rodrigo.menendez@upm.es>"]

[lib]
name = "temporal_name"
path = "src/lib.rs"

[[bin]]
name = "temporal-name"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.203", features = ["default", "derive"] }
serde_json = { version = "1.0.117", features = ["default"] }
clap = { version = "4.4.9", features = [
    "env",
    "derive",
    "wrap_help",
    "unicode",
] }
tokio = { version = "1.35.0", features = ["full"] }
anyhow = "1.0.80"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8.7", features = ["ws"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0.12"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde", "default", "v4"] }
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio", "macros", "with-json"] }
sea-orm-migration = { version = "1.1.1" }
json_to_table = "0.12.0"
base64 = "0.22.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
sha2 = "0.10.9"
rand = "0.9.2"
urlencoding = { version = "2.1.3" }
tower-http = { version = "0.6.2", features = ["trace", "cors", "fs"] }
rsa = "0.9.8"
x509-parser = "0.18.0"
async-trait = "0.1.89"
rand_distr = "0.5.1"
